Details
-
Bug
-
Resolution: Fixed
-
P4: Low
-
6.7.0 RC
-
None
-
-
41e3f2d42 (dev), 56b73cbf4 (6.7), 1f166da4a (6.6)
Description
In the Animated Windows System UI example, you can open two different application windows by left-clicking their respective desktop icons. They can then be closed by either left-clicking their icons again, or left-clicking the x button that is part of the application window. If an application window is open, and you double left-click its icon, you can now only close that application window using its x button. Left-clicking the icon will do nothing in this case.
Steps to reproduce:
- Left-click the icon with a fish on it. Notice that the application window containing a fish will be displayed.
- Left-click the icon with a fish on it again. Notice that the application window that was open, will now close.
- Repeat step 1.
- Double left-click the icon with a fish on it. Notice that the animation of closing the window will start, but the window will instantly open again.
- Left-click the icon with a fish on it. Notice that nothing happens, not matter how many times you left-click the icon.
- Left-click the x button of the application window containing a fish. Notice that is will now close. The icon with a fish on it will now act as expected again, until you double left-click it while its application window is open.
Expected behavior:
If an application windows is open, left-clicking its icon should close the application window.
Observed behavior:
If an application window is open, and you double left-click its icon, the application will remain open, but you can no longer close it with the icon. You can only close it with the x button. After closing it with the x button, left-clicking the icon will behave as expected again.
Attachments
For Gerrit Dashboard: QTBUG-123420 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
548784,5 | Fix application quit behavior in single-process mode | dev | qt/qtapplicationmanager | Status: MERGED | +2 | 0 |
548886,2 | Fix application quit behavior in single-process mode | 6.7 | qt/qtapplicationmanager | Status: MERGED | +2 | 0 |
549028,4 | Fix application quit behavior in single-process mode | 6.6 | qt/qtapplicationmanager | Status: MERGED | +2 | 0 |