Fix application quit behavior in single-process mode

Single-process mode QML applications had the finish() callback invoked
twice, if a fade-out animation was running on a window.

While at it, fixed the 'kill' stop flag to be more in line with the
multi-process case and also updated the debug output on application
stop to the newer, more readable style used by the native runtime.

Change-Id: Iee44526d95b1416b213b897fb2b0542d2535c5e7
Fixes: QTBUG-123420
Reviewed-by: Bernd Weimer <bernd.weimer@qt.io>
(cherry picked from commit 41e3f2d42e87fea95a45eef4e9572fdc67bc9a7b)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 56b73cbf4ea232277312aeebb7d8234a1805dd6f)
Reviewed-by: Robert Griebl <robert.griebl@qt.io>